# prometheus_exporter_apcupsd

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build_release.yaml  check.yaml
src/: apcupsd_bitmasks.rs  main.rs
tests/apcupsd_examples/: Back-UPS-BX-1500.status  Back-UPS-Pro-1000.status  BackUPS-USB.status  JapaneseUPS.status  PowerStack450.status  README.md  SmartUPS-vs-650.status  SmartUPS1000.status  SmartUPS1400.status  SmartUPS3000.status  SmartUPS5000.status  SmartUPS600.status  SmartUPS700-2.status  SmartUPS700.status  newbackupspro1.status  newbackupspro2.status
tests/snapshots/: examples@apcupsd_examples__Back-UPS-BX-1500.status.snap  examples@apcupsd_examples__Back-UPS-Pro-1000.status.snap  examples@apcupsd_examples__BackUPS-USB.status.snap  examples@apcupsd_examples__JapaneseUPS.status.snap  examples@apcupsd_examples__PowerStack450.status.snap  examples@apcupsd_examples__SmartUPS-vs-650.status.snap  examples@apcupsd_examples__SmartUPS1000.status.snap  examples@apcupsd_examples__SmartUPS1400.status.snap  examples@apcupsd_examples__SmartUPS3000.status.snap  examples@apcupsd_examples__SmartUPS5000.status.snap  examples@apcupsd_examples__SmartUPS600.status.snap  examples@apcupsd_examples__SmartUPS700-2.status.snap  examples@apcupsd_examples__SmartUPS700.status.snap  examples@apcupsd_examples__newbackupspro1.status.snap  examples@apcupsd_examples__newbackupspro2.status.snap  examples@user_examples__Back-UPS-XS-1500M_1.status.snap  examples@user_examples__Back-UPS-XS-1500M_2.status.snap  (+2 more)
(+4 files in other folders)
