[package]
name = "prometheus_apcupsd_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
apcaccess = "0.1.3"
chrono = "0.4.38"
futures = "0.3.30"
num = "0.4.3"
prometheus_exporter_base = { version = "1.4.0", features = ["hyper_server"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
insta = "1.40.0"
rstest = "0.22.0"
