[package]
name = "prometheus_apcupsd_exporter"
version = "0.4.0"
edition = "2021"

[dependencies]
apcaccess = { version = "0.1.3", git = "https://github.com/AndrolGenhald/apcaccess-rs" }
chrono = "0.4.38"
futures = "0.3.30"
num = "0.4.3"
prometheus_exporter_base = { version = "1.4.0", features = ["hyper_server", "serde"], git = "https://github.com/AndrolGenhald/prometheus_exporter_base" }
serde = { version = "1.0.210", features = ["derive"] }
serde_ignored = "0.1.10"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
insta = "1.40.0"
rstest = "0.22.0"
